fix z-index issue

--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ body {
   width: 287px;
   height: 160px;
   text-align: left;
+  z-index: 1;
 }
 .ldColorPicker *,
 .ldColorPicker *:before,
