--- a/picker.styl
+++ b/picker.styl
@@ -8,6 +8,7 @@
   width: 287px
   height: 160px
   text-align: left
+  z-index: 1
   *, *:before, *:after
     -moz-box-sizing: border-box
     -webkit-box-sizing: border-box
